[package]
name = "rdm4-bin"
version = "0.8.0-alpha.1"
publish = false
authors = ["lukts30 <llukas21307@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/lukts30/rdm4"

[workspace]
members = [
    "cfghelper"
]

[dependencies]
rdm4lib = { path = "rdm4lib" }
log = { version = "0.4", features = [] }
env_logger = "0.9.0"
clap = { version = "3.2.21", features = ["derive"] }


[profile.release]
opt-level = 3
debug = 1
overflow-checks = true