[package]
name = "cfghelper"
version = "0.1.0"
authors = ["lukts30 <llukas21307@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
regex = "1.3.9"
serde = { version = "1.0", features = [ "derive" ] }
quick-xml = { version = "0.17", features = [ "serialize" ] }