[package]
name = "cfghelper"
version = "0.1.0"
authors = ["lukts30 <llukas21307@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
regex = "1.6"
serde = { version = "1.0", features = [ "derive" ] }
quick-xml = { version = "0.18", features = [ "serialize" ] }
