[package]
name = "rdm4lib"
version = "0.1.0"
authors = ["lukts30 <llukas21307@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/lukts30/rdm4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7.1"
bytes = "0.5"
half = "1.6.0"
nalgebra = "0.21.1"
serde_json = "1.0"
approx = "0.3.2"
byteorder = "1.3.4"
memoffset = "0.5.5"

[dependencies.gltf]
version = "0.15"
features = ["extras", "names"]