[package]
name = "rdm4lib"
version = "0.1.0"
authors = ["lukts30 <llukas21307@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/lukts30/rdm4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.8.1"
bytes = "0.5"
nalgebra = "0.23.0"
serde_json = "1.0"
approx = "0.3.2"
byteorder = "1.3.4"

[dependencies.gltf]
version = "0.15"
features = ["extras", "names"]

[dependencies.half]
version = "1.6.0"
features = []