[package]
name = "rdm4lib"
version = "0.0.0"
publish = false
authors = ["lukts30 <llukas21307@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/lukts30/rdm4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
bytes = "0.6"
nalgebra = "0.29.0"
serde_json = "1.0"
approx = "0.3.2"
byteorder = "1.5.0"
binrw = "=0.11.2"
sha2 = "0.10"

[dependencies.base16ct]
version = "0.2.0"
features = ["alloc"]

[dependencies.gltf]
version = "1.4.1"
features = ["extras", "names"]

[dependencies.half]
version = "1.8.3"
features = []

[dependencies.rdm_derive]
path = "../rdm_derive"
