[package]
name = "rdm_web"
version = "0.1.0"
authors = ["lukts30 <llukas21307@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdm4lib = { path = "../rdm4lib" }
cfghelper = { path = "../cfghelper" }
tokio = { version = "0.3", features = ["full"] }
warp = "0.2"
handlebars = "3.4.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

